Added auto prayer switching and weapon switching to demonic gorilla plugin